--- a/styles/_contentContact.scss
+++ b/styles/_contentContact.scss
@@ -3,7 +3,7 @@
 	h1 {
 		font-size: 1.8em;
 		color: $primaryColor;
-		padding: 20px 0;
+		padding: 40px 0 20px 0;
 	}
 	.contactForm{
 		padding: 0 4%;
@@ -18,6 +18,9 @@
 		label {
 			margin-left: 1.5em;
 			display: block;
+			&.messageLabel {
+				margin-top: .50em;
+			}
 		}
 		span {
 			font-size: .8em;
@@ -32,7 +35,7 @@
 			&.userInput {
 				display: block;	
 				margin: .25em .25em 1em 0;
-				width: 75%;
+				width: 90%;
 				padding: .75em;
 			}
 			&.submitbutton {
@@ -50,18 +53,34 @@
 					border: $secondaryColor 1px solid;
 				}
 			}
+		}//end of input
+		.contactOptions {
+			margin-left: 10px;
 		}
-	}//end of preorderform
+		.message {
+			display: block;
+			width: 90%;
+			height: 100px;
+			margin-top: .2em;
+			border: 1px solid #E3E3E3;
+		}
+	}//end of contact form
 	
 }//end of content
-@media screen and (min-width: 480px) { 
+@media screen and (min-width: 566px) { 
 	.ContentContact {
+		h1 {
+			padding-top: 20px;
+		}
 		.contactForm{
 			input {
 				&.userInput {
 					width: 40%;
 				}
 			}
-		}
-	}
+			.message {
+				width: 40%;
+			}
+		}//end of contact form
+	}//end of content contact
 }
