--- a/styles/main.css
+++ b/styles/main.css
@@ -72,7 +72,7 @@ body {
   background-image: url(../images/yogurtBG.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
-  height: 350px;
+  height: 400px;
   background-position: center;
   font-family: "Baloo Bhaijaan", cursive; }
   .headerWrapper h1 {
@@ -161,7 +161,7 @@ footer {
   .ContentContact h1 {
     font-size: 1.8em;
     color: #ee4c7c;
-    padding: 20px 0; }
+    padding: 40px 0 20px 0; }
   .ContentContact .contactForm {
     padding: 0 4%; }
     .ContentContact .contactForm fieldset {
@@ -173,6 +173,8 @@ footer {
     .ContentContact .contactForm label {
       margin-left: 1.5em;
       display: block; }
+      .ContentContact .contactForm label.messageLabel {
+        margin-top: .50em; }
     .ContentContact .contactForm span {
       font-size: .8em; }
       .ContentContact .contactForm span.formTitle {
@@ -182,7 +184,7 @@ footer {
     .ContentContact .contactForm input.userInput {
       display: block;
       margin: .25em .25em 1em 0;
-      width: 75%;
+      width: 90%;
       padding: .75em; }
     .ContentContact .contactForm input.submitbutton {
       display: block;
@@ -200,7 +202,19 @@ footer {
         -ms-border-radius: 20px;
         border-radius: 20px;
         border: #84ceeb 1px solid; }
+    .ContentContact .contactForm .contactOptions {
+      margin-left: 10px; }
+    .ContentContact .contactForm .message {
+      display: block;
+      width: 90%;
+      height: 100px;
+      margin-top: .2em;
+      border: 1px solid #E3E3E3; }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 566px) {
+  .ContentContact h1 {
+    padding-top: 20px; }
   .ContentContact .contactForm input.userInput {
+    width: 40%; }
+  .ContentContact .contactForm .message {
     width: 40%; } }
